# FalmaarTools

./: .gitignore  README.md  formats.py  plots.py  priv_table.py  pyproject.toml  test_result_tables.py
ft/: exam_result_tables.py  plots.py  priv_table.py  replace_subject_codes.py  test_result_tables.py
ft-cpp/: ft.hpp  makefile  test.cpp
ft/invoice/: create_invoice.py
ft/invoice/src/: information_base.tex
ft/src/: priv-table-base.html  test-scores.tex  vgs-subject-codes.json
ft/test_exam_result_tables/: compressed.csv  full.csv  makefile  test_exam_result_tables.py
src/: test-scores.tex  vgs-subject-codes.json
